--- a/src/Modules/Station/Components/StationBrowser/StationBrowser.scss
+++ b/src/Modules/Station/Components/StationBrowser/StationBrowser.scss
@@ -36,7 +36,6 @@
 }
 
 .list-station:hover {
-  overflow-x: scroll;
   overflow-y: hidden;
 }
 
@@ -76,4 +75,51 @@
   width: 75vw;
   margin: 0 auto;
   position: relative;
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  left: -100px;
+  width: 100px;
+  height: 100px;
+  -webkit-animation: slide 0.5s forwards;
+  -webkit-animation-delay: 0.5s;
+  animation: slide 0.5s forwards;
+  animation-delay: 0.5s;
+}
+
+@-webkit-keyframes slide {
+  100% {
+    left: 0;
+  }
+}
+
+@keyframes slide {
+  100% {
+    left: 0;
+  }
+}
+
+.slideOut {
+  position: absolute;
+  left: 0px;
+  width: 100px;
+  height: 100px;
+  -webkit-animation: slideOut 0.5s forwards;
+  -webkit-animation-delay: 0.5s;
+  animation: slideOut 0.5s forwards;
+  animation-delay: 0.5s;
+}
+
+@-webkit-keyframes slideOut {
+  100% {
+    left: 100px;
+  }
+}
+
+@keyframes slideOut {
+  100% {
+    left: 100px;
+  }
 }
