--- a/src/Components/LoadingIndicator/LoadingIndicator.scss
+++ b/src/Components/LoadingIndicator/LoadingIndicator.scss
@@ -23,6 +23,10 @@
     background-color: #00a096;
     box-shadow: 30px 0 0 #97bf0d;
   }
+
+  .active {
+    background-color: red;
+  }
 }
 
 @keyframes rotate {
