--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,9 +1,9 @@
-.app-footer {
+:global(.app-footer):local(.root){
   background-color: #e06a4e;
   color: white;
   font-size: 1.3em;
   display: block;
-  margin-left: 0px;
+  margin-left: 0;
   border: none;
   & a {
     color: white;
