--- a/src/Components/ImageUploader/ImageUploader.scss
+++ b/src/Components/ImageUploader/ImageUploader.scss
@@ -1,40 +1,37 @@
-.image-uploader {
-  input {
-    display: none;
-  }
+.root {
+}
 
-  .cropper-modal-body {
-    margin: 0 auto;
-  }
+.input {
+  display: none;
+}
 
-  .cropper-modal-footer {
-    margin-right: 7%;
-  }
+.modal-body {
+  margin: 0 auto;
+}
 
-  .cropper-modal-footer button {
-    border-radius: 3px;
-  }
+.modal-footer {
+  margin-right: 7%;
+}
 
-  .cropper-modal-footer button:first-child {
-    margin-right: 10px;
-  }
+.modal-footer button {
+  border-radius: 3px;
+}
 
-  .copper {
-    width: 400px;
-    height: 400px;
-  }
+.modal-footer button:first-child {
+  margin-right: 10px;
+}
+
+.copper {
+  width: 400px;
+  height: 400px;
 
   @media all and (max-width: 460px) {
-    .copper {
-      width: 300px;
-      height: 300px;
-    }
+    width: 300px;
+    height: 300px;
   }
 
   @media all and (max-width: 350px) {
-    .copper {
-      width: 250px;
-      height: 250px;
-    }
+    width: 250px;
+    height: 250px;
   }
 }
