--- a/src/Containers/NoSideBarLayout/NoSideBarLayout.scss
+++ b/src/Containers/NoSideBarLayout/NoSideBarLayout.scss
@@ -1,26 +1,27 @@
-.app.no-side-bar {
-  .main,
-  .app-footer {
+.root {
+  .main {
     margin-left: 0;
   }
 }
 
-.app.login,
-.app.register,
-.app.forgot-password {
-  min-height: calc(100vh - 105px);
-  .background-image {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    z-index: -1;
-    top: 0;
-    left: 0;
-  }
+:global {
+  .app.login,
+  .app.register,
+  .app.forgot-password {
+    min-height: calc(100vh - 105px);
+    .background-image {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background-repeat: no-repeat;
+      background-size: cover;
+      z-index: -1;
+      top: 0;
+      left: 0;
+    }
 
-  .card-group {
-    padding: 20px 0;
+    .card-group {
+      padding: 20px 0;
+    }
   }
 }
